--- a/envs/main.yml
+++ b/envs/main.yml
@@ -18,6 +18,7 @@ dependencies:
   - conda=4.9.2=py38h06a4308_0
   - conda-package-handling=1.7.2=py38h03888b9_0
   - cryptography=3.2.1=py38h3c74f83_1
+  - diamond=0.9.14=h8b12597_3
   - icu=58.2=he6710b0_3
   - idna=2.10=py_0
   - intel-openmp=2020.2=254
