--- a/config.yaml
+++ b/config.yaml
@@ -1,5 +1,6 @@
 # path to folder where generated ourtputs should be saved, aka project folder
 path: [/mnt/fass1/kirsten/result]
+samppl_path: [/mnt/fass1/kirsten/data]
 # path to the folders where the needed databases and/or indices are located
 dataIndex: {taxmaps: '/mnt/fass1/kirsten/taxmaps', deepmicrobes: '/mnt/fass1/kirsten/deepmicrobes', kaiju: '/mnt/fass1/kirsten/kaiju', kslam: '/mnt/fass1/kirsten/kslam', kraken2: '/mnt/fass1/database/kraken2-database', centrifuge: '/mnt/fass1/database/dairy_minion', clark: '/mnt/fass1/database/clark_database', metaothello: '/mnt/fass1/kirsten/metaothello', diamond: '/mnt/fass1/kirsten/diamond', ccmetagen: '/mnt/fass1/kirsten/ccmetagen', catbat: '/mnt/fass1/kirsten/catbat'}
 
@@ -9,4 +10,6 @@ dataIndex: {taxmaps: '/mnt/fass1/kirsten/taxmaps', deepmicrobes: '/mnt/fass1/kir
 
 classification: {kaiju, diamond, taxmaps, deepmicrobes, kslam, kraken2, centrifuge, clark, metaothello, benchmarks, catbat}
 
-samples: {gridion1: '/mnt/fass1/kirsten/data/gridion/gridion_ERR3152364.fastq.gz', gridion2: '/mnt/fass1/kirsten/data/gridion/gridion_ERR3152366.fastq.gz', promethion1: '/mnt/fass1/kirsten/data/promethion/promethion_ERR3152365', promethion2: '/mnt/fass1/kirsten/data/promethion/promethion_ERR3152367'}
+samples: {gridion364: '/mnt/fass1/kirsten/data/gridion364.fastq.gz', gridion366: '/mnt/fass1/kirsten/data/gridion366.fastq.gz', promethion365: '/mnt/fass1/kirsten/data/promethion365.fastq.gz', promethion367: '/mnt/fass1/kirsten/data/promethion367.fastq.gz'}
+
+species: ['Bacillus subtilis', 'Listeria monocytogenes', 'Enterococcus faecalis', 'Staphylococcus aureus', 'Salmonella enterica', 'Escherichia coli', 'Pseudomonas aeruginosa', 'Lactobacillus fermentum', 'Saccharomyces cerevisiae', 'Cryptococcus neoformans', 'unclassified']
