--- a/envs/main.yaml
+++ b/envs/main.yaml
@@ -1,4 +1,104 @@
 name: projectMAIN
 channels:
+  - anaconda
+  - bioconda
+  - conda-forge
+  - bioconda/label/cf201901
   - defaults
-prefix: /home/re85gih/miniconda3/envs/projectMAIN/envs/projectMAIN
+dependencies:
+  - _libgcc_mutex=0.1=main
+  - blas=1.0=mkl
+  - blast=2.5.0=hc0b0e79_3
+  - boost=1.73.0=py38_11
+  - brotlipy=0.7.0=py38h27cfd23_1003
+  - bzip2=1.0.8=h7b6447c_0
+  - ca-certificates=2020.12.5=ha878542_0
+  - certifi=2020.12.5=py38h578d9bd_1
+  - cffi=1.14.4=py38h261ae71_0
+  - chardet=3.0.4=py38h06a4308_1003
+  - clark=1.2.5.1=h6bb024c_0
+  - conda=4.9.2=py38h06a4308_0
+  - conda-package-handling=1.7.2=py38h03888b9_0
+  - cryptography=3.3.1=py38h3c74f83_0
+  - cycler=0.10.0=py_2
+  - dbus=1.13.18=hb2f20db_0
+  - expat=2.2.10=he6710b0_2
+  - fontconfig=2.13.1=he4413a7_1000
+  - freetype=2.10.4=h7ca028e_0
+  - glib=2.66.1=h92f7085_0
+  - gst-plugins-base=1.14.0=hbbd80ab_1
+  - gstreamer=1.14.0=h28cd5cc_2
+  - icu=58.2=he6710b0_3
+  - idna=2.10=py_0
+  - intel-openmp=2020.2=254
+  - jpeg=9d=h36c2ea0_0
+  - kaiju=1.7.4=h8b12597_0
+  - kiwisolver=1.3.1=py38h82cb98a_0
+  - kma=1.3.6=hed695b0_0
+  - kraken2=2.0.7_beta=pl526h2d50403_0
+  - ld_impl_linux-64=2.33.1=h53a641e_7
+  - libboost=1.73.0=h37e3b65_11
+  - libedit=3.1.20191231=h14c3975_1
+  - libffi=3.3=he6710b0_2
+  - libgcc-ng=9.1.0=hdf63c60_0
+  - libpng=1.6.37=h21135ba_2
+  - libstdcxx-ng=9.1.0=hdf63c60_0
+  - libtiff=4.0.10=hc3755c2_1005
+  - libuuid=2.32.1=h14c3975_1000
+  - libxcb=1.13=h14c3975_1002
+  - libxml2=2.9.10=hb55368b_3
+  - lz4-c=1.9.2=heb0550a_3
+  - matplotlib=3.3.3=py38h578d9bd_0
+  - matplotlib-base=3.3.3=py38h5c7f4ab_0
+  - mkl=2020.2=256
+  - mkl-service=2.3.0=py38he904b0f_0
+  - mkl_fft=1.2.0=py38h23d657b_0
+  - mkl_random=1.1.1=py38h0573a6f_0
+  - ncurses=6.2=he6710b0_1
+  - numpy=1.19.2=py38h54aff64_0
+  - numpy-base=1.19.2=py38hfa32c7d_0
+  - olefile=0.46=pyh9f0ad1d_1
+  - openssl=1.1.1i=h27cfd23_0
+  - pandas=1.1.3=py38he6710b0_0
+  - pcre=8.44=he1b5a44_0
+  - perl=5.26.2=h14c3975_0
+  - pillow=6.2.1=py38h6b7be26_0
+  - pip=20.3.1=py38h06a4308_0
+  - pthread-stubs=0.4=h36c2ea0_1001
+  - py-boost=1.73.0=py38h962f231_11
+  - pycosat=0.6.3=py38h7b6447c_1
+  - pycparser=2.20=py_2
+  - pyopenssl=20.0.0=pyhd3eb1b0_1
+  - pyparsing=2.4.7=pyh9f0ad1d_0
+  - pyqt=5.9.2=py38h05f1152_4
+  - pysocks=1.7.1=py38h06a4308_0
+  - python=3.8.5=h7579374_1
+  - python-dateutil=2.8.1=py_0
+  - python_abi=3.8=1_cp38
+  - pytz=2020.4=pyhd3eb1b0_0
+  - pyyaml=5.3.1=py38h7b6447c_1
+  - qt=5.9.7=h5867ecd_1
+  - readline=8.0=h7b6447c_0
+  - requests=2.25.0=pyhd3eb1b0_0
+  - ruamel_yaml=0.15.87=py38h7b6447c_1
+  - setuptools=51.0.0=py38h06a4308_2
+  - sip=4.19.13=py38he6710b0_0
+  - six=1.15.0=py38h06a4308_0
+  - sqlite=3.33.0=h62c20be_0
+  - tk=8.6.10=hbc83047_0
+  - tornado=6.1=py38h25fe258_0
+  - tqdm=4.54.1=pyhd3eb1b0_0
+  - urllib3=1.25.11=py_0
+  - wget=1.20.1=h20c2e04_0
+  - wheel=0.36.1=pyhd3eb1b0_0
+  - xorg-libxau=1.0.9=h14c3975_0
+  - xorg-libxdmcp=1.1.3=h516909a_0
+  - xz=5.2.5=h7b6447c_0
+  - yaml=0.2.5=h7b6447c_0
+  - zlib=1.2.11=h7b6447c_3
+  - zstd=1.4.5=h9ceee32_0
+  - pip:
+    - ccmetagen==1.2.4
+    - ete3==3.1.2
+prefix: /home/re85gih/miniconda3/envs/projectMAIN
+
