--- a/envs/diamond.yaml
+++ b/envs/diamond.yaml
@@ -4,18 +4,16 @@ channels:
   - conda-forge
   - defaults
 dependencies:
-  - _libgcc_mutex=0.1=conda_forge
-  - _openmp_mutex=4.5=1_gnu
+  - _libgcc_mutex=0.1=main
   - boost-cpp=1.70.0=h7b93d67_3
-  - bzip2=1.0.8=h7f98852_4
+  - bzip2=1.0.8=h7b6447c_0
   - diamond=2.0.5=h56fc30b_0
   - icu=67.1=he1b5a44_0
-  - libgcc-ng=9.3.0=h5dbcf3e_17
-  - libgomp=9.3.0=h5dbcf3e_17
-  - libstdcxx-ng=9.3.0=h2ae2ef3_17
-  - lz4-c=1.9.2=he1b5a44_3
-  - xz=5.2.5=h516909a_1
-  - zlib=1.2.11=h516909a_1010
-  - zstd=1.4.5=h6597ccf_2
+  - libgcc-ng=9.1.0=hdf63c60_0
+  - libstdcxx-ng=9.1.0=hdf63c60_0
+  - lz4-c=1.9.3=h2531618_0
+  - xz=5.2.5=h7b6447c_0
+  - zlib=1.2.11=h7b6447c_3
+  - zstd=1.4.5=h9ceee32_0
 prefix: /home/re85gih/miniconda3/envs/diamond
 
