--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 .snakemake/*
 .nfs*
 testingScripts/*
-scripts/__pycache__*
+scripts/__pycache__/
 scripts/plot*.py
 scripts/processingOutput/taxdump.tar.gz
 scripts/processingOutput/*.tab
