--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,9 @@
 .snakemake/*
 .nfs*
 testingScripts/*
-scripts/__pycache__*
+scripts/__pycache__/*
 scripts/plot*.py
 scripts/processingOutput/taxdump.tar.gz
 scripts/processingOutput/*.tab
 taxdump.tar.gz
+testsnakemake/*
