--- a/envs/main.yaml
+++ b/envs/main.yaml
@@ -1,7 +1,7 @@
 name: projectMAIN
 channels:
-  - anaconda
   - bioconda
+  - anaconda
   - conda-forge
   - bioconda/label/cf201901
   - defaults
@@ -13,8 +13,8 @@ dependencies:
   - boost-cpp=1.69.0=h11c811c_1000
   - brotlipy=0.7.0=py38h27cfd23_1003
   - bzip2=1.0.8=h7b6447c_0
-  - ca-certificates=2020.12.5=ha878542_0
-  - certifi=2020.12.5=py38h578d9bd_1
+  - ca-certificates=2020.10.14=0
+  - certifi=2020.6.20=py38_0
   - cffi=1.14.4=py38h261ae71_0
   - chardet=3.0.4=py38h06a4308_1003
   - clark=1.2.5.1=h6bb024c_0
@@ -32,6 +32,7 @@ dependencies:
   - icu=58.2=he6710b0_3
   - idna=2.10=py_0
   - intel-openmp=2020.2=254
+  - joblib=0.17.0=py_0
   - jpeg=9d=h36c2ea0_0
   - kaiju=1.7.4=h8b12597_0
   - kiwisolver=1.3.1=py38h82cb98a_0
@@ -42,6 +43,7 @@ dependencies:
   - libedit=3.1.20191231=h14c3975_1
   - libffi=3.3=he6710b0_2
   - libgcc-ng=9.1.0=hdf63c60_0
+  - libgfortran-ng=7.3.0=hdf63c60_0
   - libpng=1.6.37=h21135ba_2
   - libstdcxx-ng=9.1.0=hdf63c60_0
   - libtiff=4.0.10=hc3755c2_1005
@@ -59,7 +61,7 @@ dependencies:
   - numpy=1.19.2=py38h54aff64_0
   - numpy-base=1.19.2=py38hfa32c7d_0
   - olefile=0.46=pyh9f0ad1d_1
-  - openssl=1.1.1i=h27cfd23_0
+  - openssl=1.1.1j=h27cfd23_0
   - pandas=1.1.3=py38he6710b0_0
   - pcre=8.44=he1b5a44_0
   - perl=5.26.2=h14c3975_0
@@ -82,10 +84,13 @@ dependencies:
   - readline=8.0=h7b6447c_0
   - requests=2.25.0=pyhd3eb1b0_0
   - ruamel_yaml=0.15.87=py38h7b6447c_1
+  - scikit-learn=0.23.2=py38h0573a6f_0
+  - scipy=1.6.1=py38h91f5cce_0
   - setuptools=51.0.0=py38h06a4308_2
   - sip=4.19.13=py38he6710b0_0
   - six=1.15.0=py38h06a4308_0
   - sqlite=3.33.0=h62c20be_0
+  - threadpoolctl=2.1.0=pyh5ca1d4c_0
   - tk=8.6.10=hbc83047_0
   - tornado=6.1=py38h25fe258_0
   - tqdm=4.54.1=pyhd3eb1b0_0
