--- a/.gitignore
+++ b/.gitignore
@@ -5,5 +5,6 @@ scripts/__pycache__/*
 scripts/plot*.py
 scripts/processingOutput/taxdump.tar.gz
 scripts/processingOutput/*.tab
+scripts/processingOutput/__pycache__/*
 taxdump.tar.gz
 testsnakemake/*
