--- a/envs/main.yaml
+++ b/envs/main.yaml
@@ -2,33 +2,48 @@ name: projectMAIN
 channels:
   - anaconda
   - bioconda
-  - conda-forge
   - bioconda/label/cf201901
+  - conda-forge
   - defaults
 dependencies:
   - _libgcc_mutex=0.1=main
+  - _r-mutex=1.0.1=anacondar_1
+  - binutils_impl_linux-64=2.33.1=he1b5a44_7
+  - binutils_linux-64=2.33.1=h9595d00_17
   - blas=1.0=mkl
   - blast=2.5.0=hc0b0e79_3
   - boost=1.73.0=py38h06a4308_11
   - boost-cpp=1.69.0=h11c811c_1000
   - brotlipy=0.7.0=py38h27cfd23_1003
+  - bwidget=1.9.14=ha770c72_0
   - bzip2=1.0.8=h7b6447c_0
-  - ca-certificates=2021.1.19=h06a4308_1
-  - certifi=2020.12.5=py38h06a4308_0
+  - ca-certificates=2020.12.5=ha878542_0
+  - cairo=1.16.0=h18b612c_1001
+  - certifi=2020.12.5=py38h578d9bd_1
   - cffi=1.14.5=py38h261ae71_0
   - chardet=4.0.0=py38h06a4308_1003
   - clark=1.2.5.1=h6bb024c_0
   - conda=4.9.2=py38h06a4308_0
   - conda-package-handling=1.7.2=py38h03888b9_0
   - cryptography=3.4.7=py38hd23ed53_0
+  - curl=7.68.0=hf8cf82a_0
   - cycler=0.10.0=py_2
   - dbus=1.13.18=hb2f20db_0
   - expat=2.3.0=h2531618_2
   - fontconfig=2.13.1=he4413a7_1000
   - freetype=2.10.4=h7ca028e_0
+  - gcc_impl_linux-64=7.3.0=hd420e75_5
+  - gcc_linux-64=7.3.0=h553295d_17
+  - gfortran_impl_linux-64=7.3.0=hdf63c60_5
+  - gfortran_linux-64=7.3.0=h553295d_17
   - glib=2.68.0=h36276a3_0
+  - graphite2=1.3.13=h58526e2_1001
+  - gsl=2.5=h294904e_1
   - gst-plugins-base=1.14.0=h8213a91_2
   - gstreamer=1.14.0=h28cd5cc_2
+  - gxx_impl_linux-64=7.3.0=hdf63c60_5
+  - gxx_linux-64=7.3.0=h553295d_17
+  - harfbuzz=2.4.0=h37c48d4_1
   - icu=58.2=he6710b0_3
   - idna=2.10=pyhd3eb1b0_0
   - intel-openmp=2020.2=254
@@ -38,13 +53,20 @@ dependencies:
   - kiwisolver=1.3.1=py38h2531618_0
   - kma=1.3.6=hed695b0_0
   - kraken2=2.0.7_beta=pl526h2d50403_0
+  - krb5=1.16.4=h2fd8d38_0
   - lcms2=2.12=h3be6417_0
   - ld_impl_linux-64=2.33.1=h53a641e_7
+  - libblas=3.8.0=21_mkl
   - libboost=1.73.0=h3ff78a5_11
+  - libcblas=3.8.0=21_mkl
+  - libcurl=7.68.0=hda55be3_0
+  - libedit=3.1.20191231=he28a2e2_2
   - libffi=3.3=he6710b0_2
   - libgcc-ng=9.1.0=hdf63c60_0
   - libgfortran-ng=7.3.0=hdf63c60_0
+  - liblapack=3.8.0=21_mkl
   - libpng=1.6.37=h21135ba_2
+  - libssh2=1.9.0=hab1572f_5
   - libstdcxx-ng=9.1.0=hdf63c60_0
   - libtiff=4.2.0=h85742a9_0
   - libuuid=2.32.1=h14c3975_1000
@@ -52,6 +74,7 @@ dependencies:
   - libxcb=1.14=h7b6447c_0
   - libxml2=2.9.10=hb55368b_3
   - lz4-c=1.9.3=h2531618_0
+  - make=4.3=hd18ef5c_1
   - matplotlib=3.3.3=py38h578d9bd_0
   - matplotlib-base=3.3.3=py38h5c7f4ab_0
   - megan=6.12.3=0
@@ -66,10 +89,12 @@ dependencies:
   - openjdk=8.0.152=h7b6447c_3
   - openssl=1.1.1k=h27cfd23_0
   - pandas=1.1.3=py38he6710b0_0
+  - pango=1.40.14=he7ab937_1005
   - pcre=8.44=he6710b0_0
   - perl=5.26.2=h14c3975_0
   - pillow=8.2.0=py38he98fc37_0
   - pip=21.0.1=py38h06a4308_0
+  - pixman=0.38.0=h516909a_1003
   - py-boost=1.73.0=py38ha9443f7_11
   - pycosat=0.6.3=py38h7b6447c_1
   - pycparser=2.20=py_2
@@ -83,22 +108,35 @@ dependencies:
   - pytz=2021.1=pyhd3eb1b0_0
   - pyyaml=5.3.1=py38h7b6447c_1
   - qt=5.9.7=h5867ecd_1
+  - r-base=3.6.1=h8900bf8_2
+  - r-prroc=1.3.1=r36_1002
   - readline=8.1=h27cfd23_0
   - requests=2.25.1=pyhd3eb1b0_0
   - ruamel_yaml=0.15.100=py38h27cfd23_0
   - scikit-learn=0.23.2=py38h0573a6f_0
   - scipy=1.6.2=py38h91f5cce_0
+  - sed=4.8=he412f7d_0
   - setuptools=52.0.0=py38h06a4308_0
   - sip=4.19.13=py38he6710b0_0
   - six=1.15.0=py38h06a4308_0
   - sqlite=3.35.4=hdfb4753_0
   - threadpoolctl=2.1.0=pyh5ca1d4c_0
   - tk=8.6.10=hbc83047_0
+  - tktable=2.10=hb7b940f_3
   - tornado=6.1=py38h27cfd23_0
   - tqdm=4.59.0=pyhd3eb1b0_1
   - urllib3=1.26.4=pyhd3eb1b0_0
   - wget=1.20.1=h20c2e04_0
   - wheel=0.36.2=pyhd3eb1b0_0
+  - xorg-kbproto=1.0.7=h14c3975_1002
+  - xorg-libice=1.0.10=h516909a_0
+  - xorg-libsm=1.2.3=h84519dc_1000
+  - xorg-libx11=1.6.12=h516909a_0
+  - xorg-libxext=1.3.4=h516909a_0
+  - xorg-libxrender=0.9.10=h516909a_1002
+  - xorg-renderproto=0.11.1=h14c3975_1002
+  - xorg-xextproto=7.3.0=h14c3975_1002
+  - xorg-xproto=7.0.31=h14c3975_1007
   - xz=5.2.5=h7b6447c_0
   - yaml=0.2.5=h7b6447c_0
   - zlib=1.2.11=h7b6447c_3
