--- a/config.yaml
+++ b/config.yaml
@@ -2,15 +2,15 @@
 path: /mnt/fass1/kirsten
 
 # path to the folders where the needed databases and/or indices are located
-DB_default: {clark_taxonomy: '/mnt/fass1/database/clark_database', clark_targets: '/mnt/fass1/database/clark_database/targets.txt', taxmaps: '/mnt/fass1/kirsten/databases/taxmaps', nodes: '/mnt/fass1/kirsten/databases/custom/nodes.dmp', names: '/mnt/fass1/kirsten/databases/custom/names.dmp', kaiju: '/mnt/fass1/kirsten/databases/kaiju', kraken2: '/mnt/fass1/database/kraken2-database', centrifuge: '/mnt/fass1/kirsten/databases/centrifuge/p_compressed', clark: '/mnt/fass1/kirsten/databases/clark', diamond: '/mnt/fass1/kirsten/databases/diamond/nr.dmnd', ccmetagen: '/mnt/fass1/kirsten/databases/ccmetagen/compress_ncbi_nt'}
+DB_default: {clark_taxonomy: '/mnt/fass1/database/clark_database', clark_targets: '/mnt/fass1/database/clark_database/targets.txt', taxmaps: '/mnt/fass1/kirsten/databases/taxmaps', kaiju: '/mnt/fass1/kirsten/databases/kaiju/kaiju_db_refseq.fmi', kraken2: '/mnt/fass1/database/kraken2-database', centrifuge: '/mnt/fass1/kirsten/databases/centrifuge/p_compressed', clark: '/mnt/fass1/kirsten/databases/clark', diamond: '/mnt/fass1/kirsten/databases/diamond/nr.dmnd', ccmetagen: '/mnt/fass1/kirsten/databases/ccmetagen/compress_ncbi_nt/ncbi_nt'}
 
 # database build on refseq of fungi and bacteria
-DB_custom: {clark_targets: "/mnt/fass2/projects/kirsten/clark/targets.txt", names: '/mnt/fass1/kirsten/databases/custom/names.dmp',nodes: '/mnt/fass1/kirsten/databases/custom/nodes.dmp', kaiju: '/mnt/fass1/kirsten/databases/custom/kaiju', kraken2: '/mnt/fass1/kirsten/databases/custom/kraken2', centrifuge: '/mnt/fass1/kirsten/databases/custom/centrifuge/refseqBacFun.centrifuge',clark: '/mnt/fass2/projects/kirsten/clark', diamond: '/mnt/fass1/kirsten/databases/custom/diamond/refseqBacFung.diamond.dmnd',  ccmetagen: '/mnt/fass1/kirsten/databases/ccmetagen'}
+DB_custom: {clark_taxonomy: "/mnt/fass2/projects/kirsten/clark", clark_targets: "/mnt/fass2/projects/kirsten/clark/targets.txt", names: '/mnt/fass1/kirsten/databases/custom/names.dmp',nodes: '/mnt/fass1/kirsten/databases/custom/nodes.dmp', kaiju: '/mnt/fass1/kirsten/databases/custom/kaiju/refseqBacFung.kaiju.fmi', kraken2: '/mnt/fass1/kirsten/databases/custom/kraken2', centrifuge: '/mnt/fass1/kirsten/databases/custom/centrifuge/refseqBacFun.centrifuge',clark: '/mnt/fass2/projects/kirsten/clark', diamond: '/mnt/fass1/kirsten/databases/custom/diamond/refseqBacFung.diamond.dmnd',  ccmetagen: '/mnt/fass1/kirsten/databases/ccmetagen'}
 # incorporated tools
 
 # preprocessing: {} ???
 
-classification: {kaiju, diamond, kslam, kraken2, centrifuge, clark, metamaps, ccmetagen}
+classification: {kaiju, diamond, kraken2, centrifuge, clark, ccmetagen}
 
 samples: {gridion364: '/mnt/fass1/kirsten/data/gridion364.fastq', gridion366: '/mnt/fass1/kirsten/data/gridion366.fastq', promethion365: '/mnt/fass1/kirsten/data/promethion365.fastq', promethion367: '/mnt/fass1/kirsten/data/promethion367.fastq'}
 
