--- a/envs/main.yaml
+++ b/envs/main.yaml
@@ -17,7 +17,7 @@ dependencies:
   - brotlipy=0.7.0=py38h27cfd23_1003
   - bwidget=1.9.14=ha770c72_0
   - bzip2=1.0.8=h7b6447c_0
-  - ca-certificates=2020.12.5=ha878542_0
+  - ca-certificates=2021.4.13=h06a4308_1
   - cairo=1.16.0=h18b612c_1001
   - certifi=2020.12.5=py38h578d9bd_1
   - cffi=1.14.5=py38h261ae71_0
@@ -73,6 +73,8 @@ dependencies:
   - libwebp-base=1.2.0=h27cfd23_0
   - libxcb=1.14=h7b6447c_0
   - libxml2=2.9.10=hb55368b_3
+  - libxslt=1.1.34=hc22bd24_0
+  - lxml=4.6.3=py38h9120a33_0
   - lz4-c=1.9.3=h2531618_0
   - make=4.3=hd18ef5c_1
   - matplotlib=3.3.3=py38h578d9bd_0
